# vkmd_bench

./: CMakeLists.txt  README.md  TODO.md  args.c  args.h  elemop.comp  main.c  matmul.comp  settings.ini
src/: args.c  args.h  main.c
src/shaders/: shader.comp
